# fork-sync-all-branches-app-rs

./: .gitignore  Cargo.toml
src/: main.rs
