[package]
name = "fork-sync-all-branches"
version = "0.1.0"
authors = ["anatawa12 <anatawa12@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
# http
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
warp = "0.3"
# serializing
serde = "1"
serde_json = "1"
# logging
log = "0.4"
env_logger = "0.8"
